@@ -2,6 +2,33 @@
 # arch-tag: automatic-ChangeLog--dancer@netfort.gr.jp--2005-web/binfmtc--mainline--0.1
 #
 
+2005-07-15 13:10:34 GMT	Junichi Uekawa (dancer on ibook) <dancer@debian.org>	patch-7
+
+    Summary:
+      merge ibook change on realcsh
+    Revision:
+      binfmtc--mainline--0.1--patch-7
+
+    merge ibook change on realcsh
+    
+    Patches applied:
+    
+     * dancer@ibookg4.dancer.netfort.gr.jp--2005/binfmtc--mainline--0.1--patch-32
+       merge work done in web/atoron
+    
+     * dancer@ibookg4.dancer.netfort.gr.jp--2005/binfmtc--mainline--0.1--patch-33
+       cprintf.c is done
+    
+
+    modified files:
+     ChangeLog changelogs/ChangeLog.ibook-dancer
+     changelogs/ChangeLog.mainline realcsh.1 realcsh.c
+
+    new patches:
+     dancer@ibookg4.dancer.netfort.gr.jp--2005/binfmtc--mainline--0.1--patch-32
+     dancer@ibookg4.dancer.netfort.gr.jp--2005/binfmtc--mainline--0.1--patch-33
+
+
 2005-07-06 22:44:25 GMT	Junichi Uekawa <dancer@netfort.gr.jp>	patch-6
 
     Summary:
